// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publish Test File via Babel as Universal: browser-esm 1`] = `
"/*! universal-folder v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
function index () {
  console.log(\\"I'm in the Browser\\");
}

export default index;
//# sourceMappingURL=browser.esm.js.map
"
`;

exports[`Publish Test File via Babel as Universal: browser-umd 1`] = `
"/*! universal-folder v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory() :
  typeof define === 'function' && define.amd ? define(factory) :
  (global = global || self, global['universal-folder'] = factory());
}(this, function () { 'use strict';

  function index () {
    console.log(\\"I'm in the Browser\\");
  }

  return index;

}));
//# sourceMappingURL=browser.umd.js.map
"
`;

exports[`Publish Test File via Babel as Universal: cli 1`] = `
"#!/usr/bin/env node

/*! universal-folder v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

function index () {
  console.log(\\"I'm in the CLI\\");
}

module.exports = index;
//# sourceMappingURL=mycli.js.map
"
`;

exports[`Publish Test File via Babel as Universal: node-cjs 1`] = `
"/*! universal-folder v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

function index () {
  console.log(\\"I'm on NodeJS\\");
}

module.exports = index;
//# sourceMappingURL=node.cjs.js.map
"
`;

exports[`Publish Test File via Babel as Universal: node-esm 1`] = `
"/*! universal-folder v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
function index () {
  console.log(\\"I'm on NodeJS\\");
}

export default index;
//# sourceMappingURL=node.esm.js.map
"
`;
